// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1970-01-01T00:00:00.000Z -1 1`] = `
{
  "actual": "1969-12-31T23:59:59.999Z",
  "dayjs": "1970-01-01T07:59:59+08:00",
  "format": "1970-01-01T07:59:59+08:00",
  "format:Asia/Taipei": "1970-01-01T07:59:59+08:00",
  "format:GMT": "1969-12-31T23:59:59Z",
  "input": -1,
  "isValid": true,
  "toISOString": "1969-12-31T23:59:59.999Z",
  "toJSON": "1969-12-31T23:59:59.999Z",
  "unix": -1,
  "valueOf": -1,
}
`;

exports[`1970-01-01T00:00:00.000Z -1 2`] = `
{
  "actual2": "1970-01-01T00:00:00.000Z",
  "input": -1,
  "isValid": true,
}
`;

exports[`1970-01-01T00:00:00.000Z -1 3`] = `
{
  "actual": "1969-12-31T23:59:59.999Z",
  "dayjs": "2001-01-01T00:00:00+08:00",
  "format": "1970-01-01T07:59:59+08:00",
  "format:Asia/Taipei": "1970-01-01T07:59:59+08:00",
  "format:GMT": "1969-12-31T23:59:59Z",
  "input": "-1",
  "isValid": true,
  "toISOString": "1969-12-31T23:59:59.999Z",
  "toJSON": "1969-12-31T23:59:59.999Z",
  "unix": -1,
  "valueOf": -1,
}
`;

exports[`1970-01-01T00:00:00.000Z -1 4`] = `
{
  "actual2": "1970-01-01T00:00:00.000Z",
  "input": "-1",
  "isValid": true,
}
`;

exports[`1970-01-01T00:00:00.000Z -Infinity 1`] = `
{
  "actual": null,
  "input": -Infinity,
  "isValid": false,
}
`;

exports[`1970-01-01T00:00:00.000Z -Infinity 2`] = `
{
  "actual2": "1970-01-01T00:00:00.000Z",
  "input": -Infinity,
  "isValid": true,
}
`;

exports[`1970-01-01T00:00:00.000Z 0 1`] = `
{
  "actual": "1970-01-01T00:00:00.000Z",
  "dayjs": "1970-01-01T08:00:00+08:00",
  "format": "1970-01-01T08:00:00+08:00",
  "format:Asia/Taipei": "1970-01-01T08:00:00+08:00",
  "format:GMT": "1970-01-01T00:00:00Z",
  "input": 0,
  "isValid": true,
  "toISOString": "1970-01-01T00:00:00.000Z",
  "toJSON": "1970-01-01T00:00:00.000Z",
  "unix": 0,
  "valueOf": 0,
}
`;

exports[`1970-01-01T00:00:00.000Z 0 2`] = `
{
  "actual2": "1970-01-01T00:00:00.000Z",
  "input": 0,
  "isValid": true,
}
`;

exports[`1970-01-01T00:00:00.000Z 0 3`] = `
{
  "actual": "1970-01-01T00:00:00.000Z",
  "dayjs": "2000-01-01T00:00:00+08:00",
  "format": "1970-01-01T08:00:00+08:00",
  "format:Asia/Taipei": "1970-01-01T08:00:00+08:00",
  "format:GMT": "1970-01-01T00:00:00Z",
  "input": "0",
  "isValid": true,
  "toISOString": "1970-01-01T00:00:00.000Z",
  "toJSON": "1970-01-01T00:00:00.000Z",
  "unix": 0,
  "valueOf": 0,
}
`;

exports[`1970-01-01T00:00:00.000Z 0 4`] = `
{
  "actual2": "1970-01-01T00:00:00.000Z",
  "input": "0",
  "isValid": true,
}
`;

exports[`1970-01-01T00:00:00.000Z Infinity 1`] = `
{
  "actual": null,
  "input": Infinity,
  "isValid": false,
}
`;

exports[`1970-01-01T00:00:00.000Z Infinity 2`] = `
{
  "actual2": null,
  "input": Infinity,
  "isValid": false,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00+00:00 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T04:00:00+00:00",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00.000Z 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T04:00:00.000Z",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec 2023-03-31T04:00:00.800Z 1`] = `
{
  "actual": "2023-03-31T04:00:00.800Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T04:00:00.800Z",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.800Z",
  "toJSON": "2023-03-31T04:00:00.800Z",
  "unix": 1680235200,
  "valueOf": 1680235200800,
}
`;

exports[`bugfix.spec 2023-03-31T12:00:00 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T12:00:00",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec 2023-03-31T12:00:00+08:00 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "2023-03-31T12:00:00+08:00",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec 1680235200000 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": 1680235200000,
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec Fri, 31 Mar 2023 04:00:00 GMT 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31 Mar 2023 04:00:00 GMT",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec Fri, 31 Mar 2023 12:00:00 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31 Mar 2023 12:00:00",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec Fri, 31-Mar-2023 04:00:00 GMT 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31-Mar-2023 04:00:00 GMT",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;

exports[`bugfix.spec Fri, 31-Mar-2023 12:00:00 1`] = `
{
  "actual": "2023-03-31T04:00:00.000Z",
  "dayjs": "2023-03-31T12:00:00+08:00",
  "format": "2023-03-31T12:00:00+08:00",
  "format:Asia/Taipei": "2023-03-31T12:00:00+08:00",
  "format:GMT": "2023-03-31T04:00:00Z",
  "input": "Fri, 31-Mar-2023 12:00:00",
  "isValid": true,
  "toISOString": "2023-03-31T04:00:00.000Z",
  "toJSON": "2023-03-31T04:00:00.000Z",
  "unix": 1680235200,
  "valueOf": 1680235200000,
}
`;
